# OnlineDetection

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  inference.cpp  main
include/: CamFramedSource.hpp
src/: CamFramedSource.cpp  main.cpp
